<?xml version="1.0"?>
<package format="2">
  <name>move_basic</name>
  <version>0.3.2</version>
  <description>Simple navigation package</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_core</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
</package>

